correct overflow pop up

--- a/style-desk.css
+++ b/style-desk.css
@@ -741,6 +741,7 @@
     height: 70%;
     gap: 24px;
     margin-top: 10px;
+    max-height: 391px;
   }
 
   #popUpImg {
@@ -751,8 +752,7 @@
 
   #popUpText {
     font-family: 'Inter', sans-serif;
-    height: 100%;
-    font-size: 17px;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -762,7 +762,11 @@
     color: #344563;
     font-weight: 400;
     line-height: 30px;
+    font-size: 17px;
+    flex: 2 2 100%;
     margin-top: 0;
+    max-height: 300px;
+    overflow: scroll;
   }
 
   #popUpText button {
